Tried fixing images not showing and made it so that resume page is an html page instead of a link

--- a/certifications.html
+++ b/certifications.html
@@ -74,31 +74,31 @@
                                 </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/main/CareerSafe-%20Critical%20Thinking.png"
+                                <img src="/externalFiles/CareerSafe- Critical Thinking.png"
                                 class="d-block w-100 center" alt="CareerSafe Critical Thinking Skills Certification">
                                 </div>
                                 <div class="carousel-item">
-                                <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/main/Copy%20of%20Completion%20Certificate%20-%20CS%20Teamwork%20Skills.png" class="d-block w-100" 
+                                <img src="/externalFiles/Copy of Completion Certificate - CS Teamwork Skills.png" class="d-block w-100" 
                                 alt="CareerSafe Teamwork Skills Training Certification">
                                 </div>
                                 <div class="carousel-item">
-                                <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/main/CareerSafe%20Time%20Management.png" class="d-block w-100" 
+                                <img src="/externalFiles/CareerSafe Time Management.png" class="d-block w-100" 
                                 alt="CareerSafe Time Management Training Certification">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/main/CareerSafe%20Personal%20Finance%20Management.png" class="d-block w-100" 
+                                    <img src="/externalFiles/CareerSafe Personal Finance Management.png" class="d-block w-100" 
                                     alt="CareerSafe Personal Financial Management Training Certification">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/main/CareerSafe%20OSHA-10%20Certification.png" class="d-block w-100" 
+                                    <img src="/externalFiles/CareerSafe OSHA-10 Certification.png" class="d-block w-100" 
                                     alt="CareerSafe OSHA-10 Training Certification">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/main/CareerSafe%20Cyber%20Safety%20Awareness%20Certificate.png" class="d-block w-100" 
+                                    <img src="/externalFiles/CareerSafe Cyber Safety Awareness Certificate.png" class="d-block w-100" 
                                     alt="CareerSafe Cyber Safety Awareness Training Certification">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/main/CareerSafe%20Communication-1%20(2)%20(1).png" class="d-block w-100" 
+                                    <img src="/externalFiles/CareerSafe Communication-1 (2) (1).png" class="d-block w-100" 
                                     alt="CareerSafe Communication Skills Skills Training Certification">
                                 </div>
                             </div>
