Fixed link to show pdf file

--- a/resume.html
+++ b/resume.html
@@ -41,8 +41,8 @@ e                <ul class="navbar-nav">
             </div>
         </nav>
         <main class="container-fluid cover">
-            <object src="YourFile.pdf" type="application/pdf" title="SamplePdf" width="500" height="720">
-                <a href="YourFile.pdf">shree</a> 
+            <object src="/externalFiles/Ramos_Resume.pdf" type="application/pdf" title="SamplePdf" width="500" height="720">
+                <a href="/externalFiles/Ramos_Resume.pdf">shree</a> 
             </object>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
