Trying to edit styling

--- a/resume.html
+++ b/resume.html
@@ -41,9 +41,11 @@ e                <ul class="navbar-nav">
             </div>
         </nav>
         <main class="container-fluid cover">
-            <object src="/externalFiles/Ramos_Resume.pdf" type="application/pdf" title="SamplePdf" width="500" height="720">
-                <a href="/externalFiles/Ramos_Resume.pdf">shree</a> 
-            </object>
+            <div class="center">
+                <object src="/externalFiles/Ramos_Resume.pdf" type="application/pdf" title="SamplePdf" width="500" height="720">
+                    <a href="/externalFiles/Ramos_Resume.pdf">se</a> 
+                </object>
+            </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
             <div class="container">
