--- a/resume.html
+++ b/resume.html
@@ -42,9 +42,7 @@ e                <ul class="navbar-nav">
         </nav>
         <main class="container-fluid cover">
             <div class="center">
-                <object src="/externalFiles/Ramos_Resume.pdf" type="application/pdf" title="SamplePdf" width="500" height="720">
-                    <a href="/externalFiles/Ramos_Resume.pdf">se</a> 
-                </object>
+                <iframe src="https://drive.google.com/file/d/1pWC6tjw-Z1D08nayDOEEATIDAaNlQsFy/preview" width="640" height="480" allow="autoplay"></iframe>
             </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
