trying to troubleshoot embeding pdf file

--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@ e                <ul class="navbar-nav">
         </nav>
         <main class="container-fluid cover">
             <div class="center">
-                <iframe src="https://drive.google.com/file/d/1pWC6tjw-Z1D08nayDOEEATIDAaNlQsFy/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true"></iframe>
             </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
