Trying to fix styling

--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@ e                <ul class="navbar-nav">
             </div>
         </nav>
         <main class="container-fluid cover">
-            <div class="center">
+            <div class="text-center">
                 <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true"></iframe>
             </div>
         </main>
