Trying to fix styling for resume pdf file

--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,9 @@ e                <ul class="navbar-nav">
             </div>
         </nav>
         <main class="container-fluid cover">
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true"></iframe>
+            <div class="center">
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true"></iframe>
+            </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
             <div class="container">
