--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@ e                <ul class="navbar-nav">
                 </ul>
             </div>
         </nav>
-        <main class="container-fluid cover">
+        <main>
             <div class ="row mx-auto">
                 <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true" height = "500px" width = "300px">
                 </iframe>
