--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand">
             <div class="container-fluid">
                 
-e                <ul class="navbar-nav">
+                <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
                             Academic 
@@ -41,7 +41,7 @@ e                <ul class="navbar-nav">
             </div>
         </nav>
         <main>
-            <div class ="row mx-auto">
+            <div>
                 <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true" >
                 </iframe>
             </div>
