Trying to fix styling for resume pdf file

--- a/resume.html
+++ b/resume.html
@@ -41,8 +41,8 @@
             </div>
         </nav>
         <main>
-            <div>
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true" >
+            <div class ="row mx-auto">
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true" height = "500px" width = "150px" >
                 </iframe>
             </div>
         </main>
