--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand">
             <div class="container-fluid">
                 
-                <ul class="navbar-nav">
+e                <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
                             Academic 
@@ -40,9 +40,9 @@
                 </ul>
             </div>
         </nav>
-        <main>
+        <main class="container-fluid cover">
             <div class ="row mx-auto">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true" height = "500px" width = "150px" >
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true" height = "500px" width = "300px">
                 </iframe>
             </div>
         </main>
