Fixed links to resume page and also updated education

--- a/education.html
+++ b/education.html
@@ -34,7 +34,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="https://drive.google.com/file/d/1yu5LA78L0KZBI9Cdqjo_9QPJUhFnMzwo/view?usp=sharing">Resume</a>
+                        <a class="nav-link text-white" href="resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="certifications.html">Certifications</a>
@@ -66,7 +66,7 @@
                                 <td>A (Geometry)</td>
                                 <td>A (Adv. Alg. 2)</td>
                                 <td>A (Adv. Trig/Precalc.)</td>
-                                <td>N/A</td>
+                                <td>WIP AP Calculus BC</td>
                             </tr>
                             <tr>
                                 <td>English</td> 
@@ -94,7 +94,7 @@
                                 <td>A (IET Core)</td>
                                 <td>A (Cybersecurity 1)</td>
                                 <td>A (Cybersecurity 2)</td>
-                                <td>N/A</td>
+                                <td>WIP (Cyber WBL)</td>
                             </tr>
                             <tr>
                                 <td>Elective</td>
@@ -134,7 +134,7 @@
                                 <td>2021 - 2022</td>
                                 <td>2022 - 2023</td>
                                 <td>2023 - 2024</td>
-                                <td>2024- - 2025</td>
+                                <td>2024 - 2025</td>
                             </tr>
                         </thead>
                         <tbody>
@@ -142,23 +142,23 @@
                                 <td>Fall</td>
                                 <td>N/A</td>
                                 <td><a href="#">MUS 107:</a> A</td>
-                                <td>HWST 107: B <br> MATH 103: A</td>
-                                <td>CHEM 162: A <br> CHEM 162L: A <br> MATH 241: A</td>
-                                <td>N/A</td>
+                                <td><a href="#">HWST 107:</a> B <br><a href="#">MATH 103:</a> A</td>
+                                <td><a href="#">CHEM 162:</a> A <br> <a href="#">CHEM 162L:</a> A <br><a href="#"> MATH 241:</a> A</td>
+                                <td><a href="#">MATH 244: </a> WIP <br><a href="#"> PHYS 170: </a>WIP<br><a href="#">PHYS 170L: </a>WIP<br><a href="#">EE 160:</a> WIP</td>
                             </tr>
                             <tr>
                                 <td>Spring</td>
                                 <td>N/A</td>
-                                <td>HIST 151: A</td>
-                                <td>ENG 100: A <br> MATH 140X: A</td>
-                                <td>ICS 111: A <br> MATH 242: A</td>
+                                <td><a href="#">HIST 151:</a> A</td>
+                                <td><a href="#">ENG 100:</a> A <br><a href="#"> MATH 140X:</a> A</td>
+                                <td><a href="#">ICS 111:</a> A <br> <a href="#">MATH 242:</a> A</td>
                                 <td>N/A</td>
                             </tr>
                             <tr>
                                 <td>Summer</td>
-                                <td>IS 103: A</td>
-                                <td> ASTR 110: A <br> ECON 130: A</td>
-                                <td>CHEM 161: A <br> CHEM 161L: B</td>
+                                <td><a href="#">IS 103:</a> A</td>
+                                <td> <a href="#">ASTR 110:</a> A <br> <a href="#">ECON 130:</a> A</td>
+                                <td><a href="#">CHEM 161:</a> A <br> <a href="#">CHEM 161L:</a> B</td>
                                 <td>N/A</td>
                                 <td>N/A</td>
                             </tr>
