--- a/experiences.html
+++ b/experiences.html
@@ -34,7 +34,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="https://drive.google.com/file/d/1yu5LA78L0KZBI9Cdqjo_9QPJUhFnMzwo/view?usp=sharing">Resume</a>
+                        <a class="nav-link text-white" href="resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="certifications.html">Certifications</a>
@@ -54,7 +54,7 @@
                         <iframe width="415" height="245" src="https://www.youtube.com/embed/HekGCEcxyf0?si=mWVkMbv8O0V0pDbl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="col-sm-4">
-                        <img src="https://e-portfolio.static.domains/IMG_4010.jpg"
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRd-Pu6qgXuSsPkcz549feSfir_mylVhLQzkTin-SrRIw&s"
                         width="415" height="245">
                     </div>
                     <div class="col-sm-4">
@@ -68,24 +68,31 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4 text-center">
-                        <h1>STEMworks Solution</h1>
-                        <p>Caption</p>
+                        <h1>STEMworks Solution (Oct. 2022)</h1>
+                        <p> 
+                            STEMworks Solution is a program that challenges students to innovate solutions to real-world problems that are related to STEM. The problem that 
+                            was posed was not having enough people to fill the growth of IT/Cybersecurity jobs in Hawaii. As such,  students were tasked with coming up with a solution
+                            to help inspire the younger generation to pursue jobs in the IT field.
+                        </p>
                         <a href="https://drive.google.com/file/d/1g-mclc6mrmQqoLcMyD1jmCGvHzvf7MOn/view?usp=sharing"><p>Business Plan</p></a>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <h1>UTI Presentation</h1>
-                        <p>Caption</p>
+                        <h1>CTSO Conference (Feb. 2024)</h1>
+                        <p>
+                            CTSO stands for Career and Technical Student Organizations which aims to help students develop career specific skills to eventually 
+                            carve out a career path for students to follow. CTSO does this through hands-on experiences, demonstrations, programs, and competitions. 
+                            I participated in the 2024 CTSO Conference, specifically the technical math category. During this competition, students were tested on their 
+                            math skills and had to be able to apply them in real life situations such as being able to convert measurements to word problems involving area and volume. 
+                         </p>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <h1>Task List Web Page</h1>
-                        <p>Caption</p>
+                        <h1>First Web Page Project</h1>
+                        <p>
+                            During my cybersecurity 1 class, we were learning how to code with HTML and CSS. Once we had learned these languages, our teacher assigned the projects
+                            to make a web page which includes and combines all the code we learned from HTML and CSS, challenging us to apply it to a real web page. This is my first web
+                            page that I created and the purpose of this website was to serve as a task list for myself.
+                        </p>
                         <a href="https://codepen.io/2501300988/pen/eYLwBNW"><p>Task List</p></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <h1>CTSO</h1>
-                        <p>Caption</p>
                     </div>
                 </div>
             </div>
