--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <title>Portfolio</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body class="site">
         <nav class="navbar navbar-expand">
             <div class="container-fluid">
                 
