Tried to use an iframe to show Resume pdf

--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
         </nav>
         <main class="container-fluid cover">
             <div class ="row mx-auto">
-                <iframe class ="center "src="https://docs.google.com/document/d/e/2PACX-1vTEbgl_P4Zo5FdeMsij7jPSWSXY1RhZc79r4yNMNkFTXFQoIUuIDGOiM8tUC7AqKLMxV-myReZEkNOZ/pub?embedded=true" height = "500px" width = "150px">
+                <iframe class ="center "src="/externalFiles/Ramos_Resume.pdf" height = "500px" width = "150px">
                 </iframe>
             </div>
         </main>
