Tried to fix resume.pdf link in resume

--- a/resume.html
+++ b/resume.html
@@ -41,10 +41,7 @@
             </div>
         </nav>
         <main class="container-fluid cover">
-            <div class ="row mx-auto">
-                <iframe class ="center "src="/externalFiles/Ramos_Resume.pdf" height = "500px" width = "150px">
-                </iframe>
-            </div>
+            <iframe src="/externalFiles/Ramos_Resume.pdf"></iframe>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
             <div class="container">
