Fixed broken image for certifications

--- a/certifications.html
+++ b/certifications.html
@@ -74,7 +74,7 @@
                                 </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                <img src="/externalFiles/CareerSafe- Critical Thinking.png"
+                                <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/CareerSafe-%20Critical%20Thinking.png"
                                 class="d-block w-100 center" alt="CareerSafe Critical Thinking Skills Certification">
                                 </div>
                                 <div class="carousel-item">
