Reorganized page, fixed broken images, and updated information

--- a/index.html
+++ b/index.html
@@ -53,37 +53,48 @@
             </div>
         </header>
         <main class="container-fluid cover">
-            <div class="text-center">
-                <h1>Who Am I?</h1>
-                <p>Hello world! My name is Ian Gabriel Ramos and I am currently
-                   a student at Waipahu High School. Throughout my life, I
-                   didn't do much. Childhood was a loop that included games,
-                   school, homework, and my club aquaponics. This continued on
-                   to middle school, especially with the coronavirus lock down,
-                   but high school would be a change. It was during this time
-                   I began to become more ambitious, joining various clubs such
-                   as esports, judo, key club, math team, and interact club. 
-                   I started challenging myself educationally by taking AP 
-                   classes and early college classes in the pursuit of an 
-                   Associate's Degree in STEM pre-engineering. I also began
-                   exploring interests that I have such as reading books,
-                   judo, analyzing literature, and even video editing. This is 
-                   all to say that initially a room hermit that didn't pursue 
-                   anything beyond the minimum, I am now a person that searches 
-                   for wonder and awe in the world through challenges, personal
-                   projects, and exploration.
-                </p>
+            <div class="text-center row">
+                <div class="Col-3 text-center">
+                    <h1>Ian Gabriel C. Ramos</h1> 
+                    <img src = "https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/headshot.png"
+                    height="300" width="225">
+                </div>
+                <div class ="Col-9 text-center">
+                    <h1>Who Am I?</h1>
+                    <p>Hello world! My name is Ian Gabriel Ramos and I am currently
+                    a student at Waipahu High School. Throughout my life, I
+                    didn't do much. Childhood was a loop that included games,
+                    school, homework, and my club aquaponics. This continued on
+                    to middle school, especially with the coronavirus lock down,
+                    but high school would be a change. It was during this time
+                    I began to become more ambitious, joining various clubs such
+                    as esports, judo, key club, math team, and interact club. 
+                    I started challenging myself educationally by taking AP 
+                    classes and early college classes in the pursuit of an 
+                    Associate's Degree in STEM pre-engineering. I also began
+                    exploring interests that I have such as reading books,
+                    judo, analyzing literature, and even video editing. This is 
+                    all to say that initially a room hermit that didn't pursue 
+                    anything beyond the minimum, I am now a person that searches 
+                    for wonder and awe in the world through challenges, personal
+                    projects, and exploration.
+                    </p>
+                </div>
             </div>
             <hr class="hr hr-blurry">
-            <div class="text-center">
-                <h1 class="text-lg">Career and Future Objectives</h1>
-                <ol>
-                    <li>Graduate with an Associate's Degree in Pre-Engineering and High School Diploma</li>
-                    <li>Gain work experience through various internships regarding web development</li>
-                    <li>Participate in HAACs, CTSO, and Congressional App Challenge</li>
-                    <li>Earn a job as either a software engineer or mechanical engineer</li>
-                    <li>Move out of Hawaii and live on my own during college</li>
-                </ol>
+            <div class="text-center row">
+                <div class = "Col-sm-9 text-center">
+                    <ol>
+                        <li>Graduate UH Manoa in Mechanical Engineering</li>
+                        <li>Gain work experience through various internships regarding mechcanical engineering or robotics/li>
+                        <li>Build a portfolio of personal porojects utilizing knowledge from mechanical engineering</li>
+                        <li>Earn a job as either a web developer or mechanical engineer</li>
+                        <li>Land a job in the mainland and earn higher job positions to reitre early</li>
+                    </ol>
+                </div>
+                <div class = "Col-sm-3 text-center">
+                    <h1 class="text-lg">Career and Future Objectives</h1>
+                </div>
             </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
