Updated with classes and grades

--- a/education.html
+++ b/education.html
@@ -66,7 +66,7 @@
                                 <td>A (Geometry)</td>
                                 <td>A (Adv. Alg. 2)</td>
                                 <td>A (Adv. Trig/Precalc.)</td>
-                                <td>WIP AP Calculus BC</td>
+                                <td>WIP (AP Calculus BC)</td>
                             </tr>
                             <tr>
                                 <td>English</td> 
@@ -144,7 +144,7 @@
                                 <td><a href="#">MUS 107:</a> A</td>
                                 <td><a href="#">HWST 107:</a> B <br><a href="#">MATH 103:</a> A</td>
                                 <td><a href="#">CHEM 162:</a> A <br> <a href="#">CHEM 162L:</a> A <br><a href="#"> MATH 241:</a> A</td>
-                                <td><a href="#">MATH 244: </a> WIP <br><a href="#"> PHYS 170: </a>WIP<br><a href="#">PHYS 170L: </a>WIP<br><a href="#">EE 160:</a> WIP</td>
+                                <td><a href="#">MATH 244: </a> A <br><a href="#"> PHYS 170: </a>B<br><a href="#">PHYS 170L: </a>A<br><a href="#">EE 160:</a> A</td>
                             </tr>
                             <tr>
                                 <td>Spring</td>
@@ -152,7 +152,7 @@
                                 <td><a href="#">HIST 151:</a> A</td>
                                 <td><a href="#">ENG 100:</a> A <br><a href="#"> MATH 140X:</a> A</td>
                                 <td><a href="#">ICS 111:</a> A <br> <a href="#">MATH 242:</a> A</td>
-                                <td>N/A</td>
+                                <td><a href="">PHYS 272: WIP</a><a href="">PHYS 272L: WIP</a><a href="">EE 211: WIP</a></td>
                             </tr>
                             <tr>
                                 <td>Summer</td>
