--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             </div>
         </nav>
         <main class="container-fluid cover">
-            <div class="text-center row">
+            <div class="text-center row container">
                 <div class="Col-3 text-center">
-                    <h1>Ian Gabriel C. Ramos</h1> 
+                    <h3>Ian Gabriel C. Ramos</h3> 
                     <img src = "https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/headshot.png"
                     height="300" width="225">
                 </div>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <hr class="hr hr-blurry">
-            <div class="text-center row">
+            <div class="text-center row container">
                 <div class = "Col-sm-9 text-center">
                     <ol>
                         <li>Graduate UH Manoa in Mechanical Engineering</li>
@@ -82,7 +82,7 @@
                     </ol>
                 </div>
                 <div class = "Col-sm-3 text-center">
-                    <h1 class="text-lg">Career and Future Objectives</h1>
+                    <h3 class="text-lg">Career and Future Objectives</h3>
                 </div>
             </div>
         </main>
