--- a/experiences.html
+++ b/experiences.html
@@ -97,32 +97,40 @@
                 </div>
                 <div class="row">
                     <div class ="col-sm-4 text-cetner">
-                        <iframe width="415" height="245" src="https://www.youtube.com/embed/HekGCEcxyf0?si=mWVkMbv8O0V0pDbl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <img src="https://github.com/iramos0301/Electronic-Portfolio/blob/main/externalFiles/Techweek.png">
                     </div>
                     <div class ="col-sm-4 text-cetner">
-                        <iframe width="415" height="245" src="https://www.youtube.com/watch?v=k_5jeATqsCY&authuser=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="415" height="245" src="https://youtu.be/k_5jeATqsCY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class ="col-sm-4 text-cetner">
-                        <iframe width="415" height="245" src="https://youtu.be/5rERNrrpSKo?si=j7AMBxQq-oRMzf98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="415" height="245" src="https://youtu.be/5rERNrrpSKo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="row">
                     <div class ="col-sm-4 text-cetner">
                         <h1>Honolulu Tech Week</h1>
                         <p>
-                           #Add description
+                           Honolulu tech week was an app contest in which contestants were able to choose their own problem on Hawaii and propose an app/solution to this problem.
+                           For my group we presented a Waipahu High School app to help convey information at Waipahu High School more efficently and conveniently. This app is designated
+                           for parents, students, faculty, and teachers. 
                         </p>
+                        <a href="https://drive.google.com/file/d/1HB4nPFYFNRQUdQxPrrWBPHExvV_eprqZ/view?usp=sharing">Presentation</a>
                     </div>
                     <div class ="col-sm-4 text-cetner">
                         <h1>Congressional App Challenge 2024</h1>
                         <p>
-                            #Add description
+                            The Congressional App Challenge prompted students to brainstorm and design an app idea for a purpose to find. The purpose of the Congressional App Challenge
+                            to help encourage and inspire students ot learn how to code. For this challenge, my group designed and submitted the Waiphu High School app, similar to the 
+                            Honolulu Tech Week submission. However, more content and updates were made as well as debugging. 
                         </p>
                     </div>
                     <div class ="col-sm-4 text-cetner">
                         <h1>Hawaii Annual Code Challenge 2024 (HACC)</h1>
                         <p>
-                            #Add description
+                            The HAAC is an annual contest in which companies, organizations, and people present their own problem/challenge to competitors for them to choose
+                            and design an app solution. For our submission, we chose the challenge to design an interactive musuem ui for students to learn about energy consumption
+                            and how it affects people economically. We chose to do this through an buttons and interactive graph which respond when a button is pressed. This graph shows
+                            both the energy used and how much it costs. 
                         </p>
                     </div>
                 </div>
@@ -134,27 +142,21 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
-                    <img src="https://e-portfolio.static.domains/IMG_0537.jpg"
-                    width="50%" height="500" class="center">
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-sm-4 text-center">
                     <h1>Phi Theta Kappa</h1>
                     <p>Waipahu Got Talent Setup & Cleanup - April, 2023</p>
                     <p>Cookie Corner Fundraiser - October, 2023</p>
                     <p>Waimea Valley Cleanup - January, 2024</p>
                     <p>Queen Lili'uokalani Botanical Garden Cleanup - February, 2024</p>
+                    <p>CRASH #1 - #4</p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <h1>Key Club</h1>
                     <p>Salvation's Army Angel Tree - December, 2023</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <h1>Outside</h1>
-                    <p>LCC Community Fair</p>
-                    <p>St. Joseph cleanup</p>
+                    <h1>Nation Technical Honor Society</h1>
+                    <p>Waipahu High School beautification</p>
                 </div>
             </div>
         </main>
