--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
         </nav>
         <main class="container-fluid cover">
             <div class="text-center row container">
-                <div class="Col-3 text-center">
+                <div class="Col-12 text-center">
                     <h3>Ian Gabriel C. Ramos</h3> 
                     <img src = "https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/headshot.png"
                     height="300" width="225">
                 </div>
-                <div class ="Col-9 text-center">
+            </div>
+            <div class="text-center row container"></div>
+                <div class ="Col-12 text-center">
                     <h1>Who Am I?</h1>
                     <p>Hello world! My name is Ian Gabriel Ramos and I am currently
                     a student at Waipahu High School. Throughout my life, I
@@ -72,6 +74,11 @@
             </div>
             <hr class="hr hr-blurry">
             <div class="text-center row container">
+                <div class = "Col-sm-3 text-center">
+                    <h3 class="text-lg">Career and Future Objectives</h3>
+                </div>
+            </div>
+            <div class="text-center row container">
                 <div class = "Col-sm-9 text-center">
                     <ol>
                         <li>Graduate UH Manoa in Mechanical Engineering</li>
@@ -81,10 +88,8 @@
                         <li>Land a job in the mainland and earn higher job positions to reitre early</li>
                     </ol>
                 </div>
-                <div class = "Col-sm-3 text-center">
-                    <h3 class="text-lg">Career and Future Objectives</h3>
-                </div>
             </div>
+
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
             <div class="container">
