Fixed formatting of text

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
             </div>
             <hr class="hr hr-blurry">
             <div class="text-center row container">
-                <div class = "Col-sm-3 text-center">
+                <div class = "Col-sm-12 text-center">
                     <h3 class="text-lg">Career and Future Objectives</h3>
                 </div>
             </div>
             <div class="text-center row container">
-                <div class = "Col-sm-9 text-center">
+                <div class = "Col-sm-12 text-center">
                     <ol>
                         <li>Graduate UH Manoa in Mechanical Engineering</li>
-                        <li>Gain work experience through various internships regarding mechcanical engineering or robotics/li>
+                        <li>Gain work experience through various internships regarding mechcanical engineering or robotics</li>
                         <li>Build a portfolio of personal porojects utilizing knowledge from mechanical engineering</li>
                         <li>Earn a job as either a web developer or mechanical engineer</li>
                         <li>Land a job in the mainland and earn higher job positions to reitre early</li>
