Added CTSO Competition for Technical Math

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -90,7 +90,7 @@
             <hr>
             <div class="row">
                 <div class="col-sm-5 text-center">
-                    <h3>Math Team (2022 - Present)</h3>
+                    <h3>Math Team (2022 - 2025)</h3>
                     <p>Math team is a club which the members compete in math competitions which are all under the Oahu Math League (OML). 
                        Math team was something I joined out of my interest for math and because I believed that I would do well since math is my strong suit, however,
                        Math team definitely humbled me. The math problems that we had to solve made me realize that there are more math skills that I can learn and I still
@@ -126,7 +126,7 @@
             <hr>
             <div class="row">
                 <div class="col-sm-5 text-center">
-                    <h3>Phi Theta Kappa (2021 - Present)</h3>
+                    <h3>Phi Theta Kappa (2021 - 2025)</h3>
                     <p>Phi Theta Kappa is a honor society that's at the collegiate level. PTK members are recognized for academic achievements
                        and strive for scholarship, laedership, felllowship, and service. PTK offers these traits through various activities and events
                        such as community service, PTK catalyst (an event that brings together members for professional development), scholarships offered by 
@@ -170,7 +170,7 @@
             <hr>
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h3>E-sports (2024 - Present)</h3>
+                    <h3>E-sports (2024 - 2025)</h3>
                     <p>E-sports is another club that I joined because it piqued my interests greatly. Ever since I was a child, 
                        I played video games a lot and always wanted to join a club that was about playing games. Being able to do that
                        in high school while also making the game we play competitive gives me something to look forward to. I get to 
@@ -183,6 +183,19 @@
                 </div>
             </div>
             <hr>
+            <div class="row">
+              <div class="col-sm-5 text-center">
+                  <h3>CTSO Technical Math Competition (2024 - 2025)</h3>
+                  <p>CTSO (Career Technical Skill Organization) is an event in which CTSOs such as SkillsUSA, FCCLA, and more join together to compete in their resepctive
+                    CTSO's events. For me, this was technical math in which math such as algebra, trigonometry, and geomtery were utilized to real life applicatiions/trades.
+                    I was able to place 2nd for this competition.
+                  </p>
+              </div>
+              <div class="col-sm-7">
+                <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/IMG_8082.jpg">
+            </div>
+          </div>
+          <hr>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
             <div class="container">
