Fixed broken links

--- a/experiences.html
+++ b/experiences.html
@@ -97,13 +97,13 @@
                 </div>
                 <div class="row">
                     <div class ="col-sm-4 text-cetner">
-                        <img src="https://github.com/iramos0301/Electronic-Portfolio/blob/main/externalFiles/Techweek.png">
+                        <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/Techweek.png">
                     </div>
                     <div class ="col-sm-4 text-cetner">
-                        <iframe width="415" height="245" src="https://youtu.be/k_5jeATqsCY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="415" height="245" src="https://www.youtube.com/embed/k_5jeATqsCY?si=xOQsG9i3d__knwXS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class ="col-sm-4 text-cetner">
-                        <iframe width="415" height="245" src="https://youtu.be/5rERNrrpSKo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="415" height="245" src="https://www.youtube.com/embed/5rERNrrpSKo?si=efGMH5aZiOEgcwUG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="row">
