--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     height="300" width="225">
                 </div>
             </div>
-            <div class="text-center row container"></div>
+            <div class="text-center row container">
                 <div class ="Col-12 text-center">
                     <h1>Who Am I?</h1>
                     <p>Hello world! My name is Ian Gabriel Ramos and I am currently
