Fixed broken image

--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,11 @@
             </div>
         </nav>
         <main class="container-fluid cover">
-            <iframe src="/externalFiles/Ramos_Resume .pdf"></iframe>
+            <div class="text-center row">
+                <div class="col-sm-12">
+                    <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/Ramos_Resume%20(2)-1.png">
+                </div>
+            </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
             <div class="container">
