--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,8 @@
         <nav class="navbar navbar-expand">
             <div class="container-fluid">
                 
-               <ul class="navbar-nav">
+                <a class="navbar-brand" href="index.html"><i class="bi bi-house">Ian's Portfolio</i></a>
+                <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
                             Academic 
